# C-bind

./: .editorconfig  .gitattributes  .gitignore  .travis.yml  CMakeLists.txt  CODEOWNERS  Dockerfile  Doxyfile  Makefile  README.md  bind.c  bind.h  bind_blank.h  bind_defs.h  bind_map.c  bind_map.h  bind_utilities.c  bind_utilities.h  check_bits.h  index.html  main.c  tmp.c
docs/html/: _r_e_a_d_m_e_8md.html  annotated.html  bind_8c.html  bind_8h.html  bind_8h_source.html  bind__defs_8h.html  bind__defs_8h_source.html  bind__utilities_8c.html  bind__utilities_8h.html  bind__utilities_8h_source.html  bind__vec_8c.html  bind__vec_8h.html  bind__vec_8h_source.html  bound__internals_8h.html  bound__internals_8h_source.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  globals_vars.html  index.html  menudata.js  struct_string_vec.html  structbind__lock__t.html  structbind__vec.html  structbound__internals__t.html  structobscurred__mutex.html  test-non-systemv_8c.html  test-systemv_8c.html  test_8c.html
docs/html/search/: all_0.js  all_1.js  all_10.js  all_2.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  defines_0.js  defines_1.js  defines_2.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  files_0.js  files_2.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  pages_0.js  searchdata.js  typedefs_0.js  (+14 more)
docs/latex/: annotated.tex  bind_8c.tex  bind_8h.tex  bind__defs_8h.tex  bind__utilities_8c.tex  bind__utilities_8h.tex  bind__vec_8c.tex  bind__vec_8h.tex  bound__internals_8h.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  files.tex  index.tex  refman.tex  struct_string_vec.tex  structbind__lock__t.tex  structbind__vec.tex  structbound__internals__t.tex  structobscurred__mutex.tex  test-non-systemv_8c.tex  test-systemv_8c.tex  test_8c.tex
examples/: CMakeLists.txt  test-non-systemv.c  test.c
old/: Makefile  bind.c  bind.h  main.c
src/: CMakeLists.txt  bind.c  bind.h  bind_blank.c  bind_check_bits.h  bind_defs.h  bind_utilities.c  bind_utilities.h  bind_vec.c  bind_vec.h  bind_vector.c  bind_vector.h  bound_internals.h  main.c  test-non-systemv.c  test-systemv.c  test.c
